# server-sebuah-perpus

./: .env.example  .vercelignore  Cargo.toml  Dockerfile  README.md  api.http  docker-compose.yml  forester-commodore-hornblower.epub  nginx.conf  vercel.json
.github/: migrate.yml
api/: index.rs
entity/: Cargo.toml  build.rs
entity/src/: book_files.rs  book_loans.rs  books.rs  lib.rs  mod.rs  products.rs  role.rs  roles.rs  sea_orm_active_enums.rs  user_roles.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250720_082026_products.rs  m20250723_074116_users.rs  m20250725_111229_roles.rs  m20250725_112514_user_roles.rs  m20260213_114308_books.rs  m20260213_120143_book_files.rs  m20260227_112928_book_loans.rs  main.rs
src/: lib.rs  main.rs  routes.rs  utils.rs
src/app/: auth.rs  mod.rs  state.rs
src/app/controllers/: book_controller.rs  book_loan_controller.rs  book_upload_controller.rs  file_controller.rs  mod.rs  product_controller.rs  role_controller.rs  user_controller.rs
src/app/files/: epub_parser.rs  files.rs  mod.rs  validator.rs
src/app/hashing/: hash.rs
src/app/models/: book.rs  book_file.rs  book_loans.rs  mod.rs  product.rs  role.rs  user.rs
src/app/repositories/: book_file_repository.rs  book_loan_repository.rs  book_repository.rs  mod.rs  product_repository.rs  role_repository.rs  user_repository.rs
src/app/services/: book_loan_service.rs  book_service.rs  mod.rs  product_service.rs  role_service.rs  user_service.rs
src/config/: config.rs  database.rs
src/core/: error.rs
src/mock/: factory.rs  mod.rs  seeder.rs
