[package]
name = "sebuah-perpus"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["entity"]

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }

axum = { version = "0.8.1", features = ["tokio", "tracing", "macros", "multipart"] }
infer = "0.19.0"
tokio = { version = "1.43.0", features = ["full", "io-util"]}
tower-http = { version = "0.6.2", features = ["tracing", "trace", "cors", "limit"] }
chrono = { version = "0.4.41" }
slug = { version = "0.1.6"  }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sea-orm = { version = "1.1.10", features = ["sqlx-postgres", "runtime-tokio", "macros", "with-uuid", "with-chrono"] }
anyhow = "1.0.98"
uuid = { version = "1.17.0", features = ["v4"] }
jsonwebtoken = "10.3.0"
async-trait = "0.1.88"
validator = { version = "0.20.0", features = ["derive"] }
epub = "2.1.5"
ammonia = "4.1.2"
bcrypt = "0.19.0"
rand = { version = "0.10.0", features = ["thread_rng", "std"] }
argon2 = { version = "0.5.3", features = ["std", "rand"] }
sha3 = "0.10.8"
hex = "0.4.3"
regex = "1.11.1"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tokio-util = { version = "0.7.18", features = ["io-util"] }

# Vercel requirements
vercel_runtime = { version = "2.1.1", features = ["axum"] }

[[bin]]
name = "index"
path = "api/index.rs"

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
